# doNET

./: .gitignore  CLAUDE.md  README.md  environment.yml  pytest.ini  requirements.txt  run_experiment.py
.github/workflows/: ci.yml
R/: AMLTirated.R  DataProcessing.R  GSM6805326.R  RefMapping.R  WNN_Mapping.R
Tutorials/: Finetune.ipynb  FinetuneModel.ipynb  Test.ipynb  Training.ipynb
research/: prepare.py  program.md  pyproject.toml  results.tsv  train.py
scratch/: add_headers.py
scripts/: __init__.py  visualizations.py
scripts/data_provider/: __init__.py  data_preprocessing.py  graph_data_builder.py  synthetic_citeseq.py
scripts/model/: __init__.py  doNET.py  mlops.md
scripts/trainer/: gat_trainer.py
tests/: conftest.py  test_data_pipeline.py  test_gat_trainer.py  test_model_components.py  test_performance_benchmark.py  test_training.py
